# cabal-list-sources

./: LICENSE  README.md  cabal-list-sources.cabal
app/: Main.hs
examples/: pre-commit
